# amr-project

./: .gitignore  AUDIT_INTEGRATION_SUMMARY.md  CONTRIBUTORS.md  README.md  RELEASE_NOTES_v1.0.0.md  test_api_with_audit.py  test_audit_integration.py  test_complete_audit_integration.py
amr-engine/: .dockerignore  .env  .env.example  .env.kafka.example  DOCKER_PSEUDONYMIZATION_DEMO.md  DOCKER_SUCCESS_SUMMARY.md  Makefile  Makefile.pact  QA_TEST_EXAMPLES.md  README.md  README_ENHANCED.md  build.ps1  build.sh  demo_pseudonymization.py  demo_pseudonymization_simple.py  pre-commit-config.yaml  pyproject.toml  validate_imports.py
amr-engine/amr_engine/: __init__.py  config.py  logging_setup.py  main.py
amr-engine/amr_engine/api/: audit_routes.py  deps.py  pact_routes.py  routes.py
amr-engine/amr_engine/audit/: __init__.py  hipaa_logger.py
amr-engine/amr_engine/cache/: __init__.py  redis_cache.py
amr-engine/amr_engine/core/: audit.py  audit_integration.py  auth.py  classifier.py  correlation.py  correlation_middleware.py  errors.py  exceptions.py  expert_rules.py  fhir_adapter.py  fhir_profiles.py  fhir_resources.py  hl7v2_parser.py  metrics.py  mtls.py  policy.py  profile_validation.py  rbac.py  reasoning.py  rules_loader.py  schemas.py  surveillance.py  terminology.py  tracing.py
amr-engine/amr_engine/fhir/: __init__.py  observation_builder.py
amr-engine/docker/: Dockerfile  docker-compose.kafka.yml  docker-compose.observability.yml  docker-compose.yml  prometheus.yml  test-docker.sh
amr-engine/docs/: DOCKER_TROUBLESHOOTING.md  POLICY.md  PROVIDER_VERIFICATION_GUIDE.md  PSEUDONYMIZATION_README.md  complete_qa_report.md  iso_compliance_prompt.md  spec_microbiology_amr.md  spwc_md.md
amr-engine/examples/: policy.json
amr-engine/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  rbac.yaml  secret.yaml  service.yaml
amr-engine/medical_device/: README.md  __init__.py  clinical_evaluation.py  compliance_monitoring.py  documentation_manager.py  post_market_surveillance.py  regulatory_submission.py  risk_management_system.py  software_validation.py
amr-engine/schemas/: policy-schema.json
amr-engine/test_data/: README.md  fhir_bad_example_1.json  fhir_good_example_1.json  hl7v2_bad_example_1.txt  hl7v2_good_example_1.txt  hl7v2_good_example_2.txt  run_qa_tests.sh
amr-engine/tests/: conftest.py  test_api_classify_e2e.py  test_api_misc.py  test_classifier_disc.py  test_classifier_mic.py  test_conflicting_results.py  test_disc_missing_values.py  test_exceptions_esbl.py  test_fhir_parser_edgecases.py  test_golden_dataset.py  test_missing_values_rr.py  test_mrsa_betalactam_override.py  test_pseudonymization.py  test_rules_reload.py  test_rules_validation.py
(+53 files in other folders)
